--- a/my-app/src/components/Modal/styles.module.scss
+++ b/my-app/src/components/Modal/styles.module.scss
@@ -1,6 +1,22 @@
 $buttonBack:#661800;
+$whiteColor:#ffffff;
 .modalStyle{
     background-color:$buttonBack;
     width: 100%;
     height : 18%;
   }
+.closeButton{
+  background-color: $buttonBack;
+  color:$whiteColor;
+  width: 40%;
+  height: 40px;
+  border-radius: 15px;
+  display: block;
+}
+.modalDiv{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 10px;
+}
